Removed redundant classes and fixed linter warnings